--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>محاولات متبقية: <span id="attemptsLeft">6</span></p>
         <button onclick="useHelp()" id="helpButton">مساعدة</button>
         <p>مرات متبقية لاستخدام المساعدة: <span id="helpCounter">3</span></p>
-        <button id="startNewGameButton">ابدأ لعبة جديدة</button>
+        <button id="startNewGameButton" onclick="startGame(true)">ابدأ لعبة جديدة</button>
     </div>
     <script src="script.js"></script>
 </body>
